--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,15 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+  .gradient {
+    @apply bg-linear-to-b from-white via-gray-300 to-gray-600;
+  }
+  .gradient-title {
+    @apply bg-linear-to-b from-white via-gray-300 to-gray-600 text-transparent bg-clip-text;
+  }
+}
